# QSqliteProfiler

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Log.cpp  Log.h  Log2db.cpp
test/: CMakeLists.txt  test1.cpp
